@@ -7,6 +7,8 @@ v2.14.1 - xx xxx xxxx
      * Add hardware offload support tunnel pop action (experimental).
      * Add hardware offload support VXLAN vports.
      * 'dpdkvdpa' port type.
+   - 'ovs-appctl dpctl/dump-conntrack' can now show the offloaded status
+     for CT flows per direction.
 
 v2.14.0 - 17 Aug 2020
 ---------------------
